# taino-edit

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN_NOTES.md  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  deny.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  rfc.md
.github/workflows/: ci.yml
crates/taino-edit/: Cargo.toml
crates/taino-edit-core/: Cargo.toml
crates/taino-edit-core/src/: attrs.rs  commands.rs  content.rs  error.rs  fragment.rs  html.rs  inputrules.rs  json.rs  keymap.rs  lib.rs  map.rs  mark.rs  markdown.rs  node.rs  plugin.rs  pos.rs  replace.rs  schema.rs  schema_macro.rs  selection.rs  slice.rs  state.rs  step.rs  transform.rs
crates/taino-edit-core/tests/: block_commands.rs  cell_selection.rs  commands.rs  html.rs  inputrules.rs  keymap.rs  mapping.rs  mark_attr_steps.rs  markdown.rs  model.rs  plugin.rs  replace.rs  replace_around.rs  schema_macro.rs  state.rs  step.rs
crates/taino-edit-dioxus/: Cargo.toml
crates/taino-edit-dioxus/src/: lib.rs
crates/taino-edit-dioxus/tests/: component.rs  keymap.rs
crates/taino-edit-dom/: Cargo.toml
crates/taino-edit-dom/src/: decoration.rs  desc.rs  lib.rs  position_map.rs  view.rs
crates/taino-edit-dom/tests/: caret_after_edits.rs  clipboard.rs  composition.rs  decoration.rs  dom_changes.rs  drag_drop.rs  empty_block.rs  focus.rs  inline_decoration.rs  list_editing.rs  patch.rs  selection.rs  table_render.rs  view.rs  view_plugin.rs  wasm_smoke.rs
crates/taino-edit-extensions/: Cargo.toml
crates/taino-edit-extensions/src/: align.rs  blockquote.rs  bold.rs  code_block.rs  code_mark.rs  heading.rs  history.rs  image.rs  italic.rs  lib.rs  link.rs  lists.rs  paragraph.rs  table.rs  transform_case.rs
crates/taino-edit-extensions/tests/: align.rs  blockquote.rs  blocks.rs  code_block.rs  code_mark.rs  history.rs  image.rs  link.rs  lists.rs  marks.rs  table.rs  transform_case.rs
crates/taino-edit-leptos/: Cargo.toml
crates/taino-edit-leptos/src/: lib.rs
crates/taino-edit-leptos/tests/: component.rs  events.rs  keymap.rs
crates/taino-edit-table-view/: Cargo.toml
crates/taino-edit-table-view/src/: lib.rs
crates/taino-edit-table-view/tests/: drag.rs
crates/taino-edit/src/: lib.rs
examples/basic-dioxus/: Cargo.toml  Dioxus.toml  README.md  index.html
examples/basic-dioxus/src/: main.rs
examples/basic-leptos/: Cargo.toml  README.md  index.html
examples/basic-leptos/src/: main.rs
examples/headless-core/: Cargo.toml  README.md
examples/headless-core/src/: main.rs
scripts/: install-wasm-test-runner.sh  wasm-test.sh
