[package]
name = "taino-edit-dioxus"
description = "Dioxus adapter for taino-edit, the native-Rust WYSIWYG rich-text editor."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dioxus = { version = "0.6", default-features = false, features = ["html", "signals", "hooks", "macro"] }
taino-edit-core = { workspace = true }
taino-edit-dom = { workspace = true }
wasm-bindgen = "0.2.121"

[dependencies.web-sys]
version = "0.3.98"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "Node",
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "KeyboardEventInit",
    "InputEvent",
    "CompositionEvent",
    "ClipboardEvent",
    "DataTransfer",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.71"

# Browser-test-only deps. `dioxus-web` and `gloo-timers` are wasm-only, so
# they are target-gated to keep `cargo test` (host) building cleanly.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
dioxus-web = "0.6"
gloo-timers = { version = "0.3.0", features = ["futures"] }
taino-edit-extensions = { workspace = true }
taino-edit-table-view = { workspace = true }
