[package]
name = "taino-edit-dom"
description = "contenteditable/DOM bridge for the taino-edit WYSIWYG editor (web-sys, wasm-bindgen, js-sys)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
js-sys = "0.3.98"
taino-edit-core = { workspace = true }
wasm-bindgen = "0.2.121"
web-sys = "0.3.98"
# web-sys / wasm-bindgen / js-sys are added (version-pinned) during scaffold.
