[package]
name = "taino-edit-dom"
description = "contenteditable/DOM bridge for the taino-edit WYSIWYG editor (web-sys, wasm-bindgen, js-sys)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
js-sys = "0.3.98"
taino-edit-core = { workspace = true }
wasm-bindgen = "0.2.121"

[dependencies.web-sys]
version = "0.3.98"
features = [
    "Window",
    "Document",
    "DocumentFragment",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "Node",
    "NodeList",
    "Text",
    "CharacterData",
    "DomTokenList",
    "NamedNodeMap",
    "Attr",
    "Selection",
    "Range",
    "DomRect",
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "InputEvent",
    "CompositionEvent",
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.71"
