[package]
name = "taino-edit-extensions"
description = "Standard editing extensions (bold, italic, heading, paragraph, history) for the taino-edit WYSIWYG editor."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
taino-edit-core = { workspace = true }
