[package]
name = "taino-edit-leptos"
description = "Leptos adapter for taino-edit, the native-Rust WYSIWYG rich-text editor."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
leptos = { version = "0.8.3", features = ["csr"] }
taino-edit-core = { workspace = true }
taino-edit-dom = { workspace = true }
wasm-bindgen = "0.2.121"

[dependencies.web-sys]
version = "0.3.98"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "Node",
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "KeyboardEventInit",
    "InputEvent",
    "CompositionEvent",
    "ClipboardEvent",
    "DataTransfer",
]

[dev-dependencies]
gloo-timers = { version = "0.3.0", features = ["futures"] }
serde_json = "1.0.149"
wasm-bindgen-test = "0.3.71"
