[package]
name = "taino-edit"
description = "Native Rust WYSIWYG rich-text editor framework for Leptos (Dioxus reserved for v0.2). Pure Rust, no JS bridge."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
taino-edit-core = { workspace = true }
taino-edit-dom = { workspace = true, optional = true }
taino-edit-extensions = { workspace = true, optional = true }
taino-edit-leptos = { workspace = true, optional = true }
taino-edit-dioxus = { workspace = true, optional = true }

[features]
default = []
extensions = ["dep:taino-edit-extensions"]
dom = ["dep:taino-edit-dom"]
leptos = ["dep:taino-edit-leptos", "dom", "extensions"]
dioxus = ["dep:taino-edit-dioxus"]

[package.metadata.docs.rs]
all-features = true
