[package]
name = "basic-dioxus"
description = "A minimal taino-edit + Dioxus demo. Build with `dx serve` in this directory."
version = "0.0.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
dioxus = { version = "0.6", features = ["web"] }
serde_json = "1"
taino-edit-dioxus = { path = "../../crates/taino-edit-dioxus" }
taino-edit-extensions = { path = "../../crates/taino-edit-extensions" }
taino-edit-table-view = { path = "../../crates/taino-edit-table-view" }
