[package]
name = "headless-core"
description = "Server-side / CLI demo of taino-edit-core: schema, transforms, JSON and HTML round-trip without any DOM."
version = "0.0.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
taino-edit-core = { path = "../../crates/taino-edit-core" }
taino-edit-extensions = { path = "../../crates/taino-edit-extensions" }
serde_json = "1"
